# mosquitto

./: .gitignore  CMakeLists.txt  ChangeLog.txt  Makefile  config.h  config.mk  mosquitto.conf  set-version.sh
.github/workflows/: docker-build-push.yml
apps/db_dump/: Makefile  db_dump.c  db_dump.h  print.c  stubs.c
apps/mosquitto_ctrl/: CMakeLists.txt  Makefile  broker.c  dynsec.c  dynsec_client.c
apps/mosquitto_passwd/: CMakeLists.txt  Makefile
client/: CMakeLists.txt  Makefile  client_shared.c  sub_client_output.c
cmake/: Findsqlite3.cmake
common/: base64_mosq.c  time_mosq.c
examples/mysql_log/: Makefile
examples/publish/: Makefile  basic-websockets-1.c
examples/subscribe_simple/: Makefile
examples/temperature_conversion/: Makefile
include/: mosquitto.h  mosquitto_broker.h
installer/: mosquitto.nsi  mosquitto64.nsi
lib/: CMakeLists.txt  Makefile  actions_publish.c  actions_subscribe.c  actions_unsubscribe.c  alias_mosq.c  connect.c  handle_connack.c  handle_ping.c  handle_pubackcomp.c  handle_publish.c  handle_pubrel.c  handle_suback.c  helpers.c  http_client.c  logging_mosq.c  memory_mosq.c  memory_mosq.h  messages_mosq.c  mosquitto.c  mosquitto_internal.h  net_mosq.c  net_mosq.h  net_ws.c  options.c  packet_datatypes.c  packet_mosq.c  property_mosq.c  send_connect.c  send_disconnect.c  send_publish.c  send_subscribe.c  socks_mosq.c  srv_mosq.c  utf8_mosq.c  util_topic.c  will_mosq.c
lib/cpp/: CMakeLists.txt  Makefile
man/: Makefile  mosquitto.conf.5.xml  mosquitto_sub.1.xml
plugins/: CMakeLists.txt  Makefile  README.md
plugins/common/: plugin_common.c  plugin_common.h
plugins/dynamic-security/: CMakeLists.txt  Makefile  acl.c  auth.c  clientlist.c  clients.c  config.c  config_init.c  control.c  default_acl.c  dynamic_security.h  groups.c  kicklist.c  plugin.c  rolelist.c  roles.c  test.sh  tick.c
plugins/examples/: CMakeLists.txt  Makefile
plugins/persist-sqlite/: CMakeLists.txt  Makefile  base_msgs.c  client_msgs.c  clients.c  init.c  msg_store.c  persist_sqlite.h  plugin.c  restore.c  retain_msgs.c  retains.c  subscriptions.c  test.conf  tick.c
plugins/shared/: plugin_shared.c
snap/: snapcraft.yaml
src/: CMakeLists.txt  Makefile  bridge.c  bridge_topic.c  broker_control.c  conf.c  conf_includedir.c  context.c  control.c  database.c  handle_auth.c  handle_connect.c  handle_publish.c  handle_subscribe.c  handle_unsubscribe.c  http_serv.c  keepalive.c  linker-macosx.syms  linker.syms  listeners.c  logging.c  loop.c  memory_public.c  mosquitto.c  mosquitto_broker_internal.h  mux.c  mux_epoll.c  mux_kqueue.c  mux_poll.c  net.c  persist.h  persist_read.c  persist_read_v234.c  persist_read_v5.c  persist_write.c  persist_write_v5.c  plugin.c  plugin_callbacks.c  plugin_cleanup.c  plugin_init.c  (+16 more)
test/: Makefile  mosq_test.py
test/broker/: 01-connect-accept-protocol.py  01-connect-allow-anonymous.py  01-connect-disconnect-v5.py  01-connect-uname-no-password-denied.py  01-connect-uname-or-anon.py  01-connect-uname-password-denied-no-will.py  01-connect-uname-password-denied.py  01-connect-uname-password-success-no-tls.py  01-connect-unix-socket.py  01-connect-windows-line-endings.py  01-connect-zero-length-id.py  02-shared-nolocal.py  02-shared-qos0-v5.py  02-subhier-crash.py  02-subpub-b2c-topic-alias.py  02-subpub-qos0-long-topic.py  02-subpub-qos0-oversize-payload.py  02-subpub-qos0-queued-bytes.py  02-subpub-qos0-retain-as-publish.py  02-subpub-qos0-send-retain.py  02-subpub-qos0-subscription-id.py  02-subpub-qos0-topic-alias-unknown.py  02-subpub-qos0-topic-alias.py  02-subpub-qos1-message-expiry-retain.py  02-subpub-qos1-message-expiry-will.py  02-subpub-qos1-message-expiry.py  02-subpub-qos1-nolocal.py  02-subpub-qos1-oversize-payload.py  02-subpub-qos1.py  02-subpub-qos2-1322.py  02-subpub-qos2-max-inflight-bytes.py  02-subpub-qos2-pubrec-error.py  02-subpub-qos2-receive-maximum-1.py  02-subpub-qos2-receive-maximum-2.py  02-subpub-qos2.py  02-subscribe-dollar-v5.py  02-subscribe-invalid-utf8.py  02-subscribe-long-topic.py  02-subscribe-persistence-flipflop.py  03-pattern-matching.py  (+172 more)
test/client/: 02-subscribe-argv-errors.py  02-subscribe-filter-out.py  02-subscribe-format-json-properties.py  02-subscribe-format-json-qos0.py  02-subscribe-format-json-qos1.py  02-subscribe-format-json-retain.py  02-subscribe-format.py  02-subscribe-null.py  02-subscribe-qos1.py  02-subscribe-verbose.py  03-publish-argv-errors.py  03-publish-file-empty.py  03-publish-file.py  03-publish-options-file.py  03-publish-qos0-empty.py  03-publish-qos1-properties.py  03-publish-qos1.py  03-publish-repeat.py  03-publish-socks.py  03-publish-stdin-file.py  03-publish-stdin-line.py  03-publish-url.py  Makefile  test.py
test/lib/: 01-con-discon-success-v5.py  01-con-discon-success.py  01-con-discon-will-clear.py  01-con-discon-will-v5.py  01-con-discon-will.py  01-keepalive-pingreq.py  01-no-clean-session.py  01-pre-connect-callback.py  01-server-keepalive-pingreq.py  01-unpwd-set.py  01-will-set.py  01-will-unpwd-set.py  02-subscribe-qos0.py  02-subscribe-qos1.py  02-subscribe-qos2.py  02-unsubscribe-multiple-v5.py  02-unsubscribe-v5.py  02-unsubscribe.py  03-publish-b2c-qos1-unexpected-puback.py  03-publish-b2c-qos1.py  03-publish-b2c-qos2-len.py  03-publish-b2c-qos2-unexpected-pubcomp.py  03-publish-b2c-qos2-unexpected-pubrel.py  03-publish-b2c-qos2.py  03-publish-c2b-qos1-disconnect.py  03-publish-c2b-qos1-len.py  03-publish-c2b-qos1-receive-maximum.py  03-publish-c2b-qos1-timeout.py  03-publish-c2b-qos2-disconnect.py  03-publish-c2b-qos2-len.py  03-publish-c2b-qos2-maximum-qos-0.py  03-publish-c2b-qos2-maximum-qos-1.py  03-publish-c2b-qos2-pubrec-error.py  03-publish-c2b-qos2-receive-maximum-1.py  03-publish-c2b-qos2-receive-maximum-2.py  03-publish-c2b-qos2-timeout.py  03-publish-c2b-qos2.py  03-publish-qos0-no-payload.py  03-publish-qos0.py  03-request-response-correlation.py  (+14 more)
test/old/: Makefile
test/random/: Makefile
test/unit/: Makefile  bridge_topic_test.c  keepalive_test.c  persist_read_stubs.c  persist_read_test.c  persist_write_stubs.c  (+2 more)
(+60 files in other folders)
